# trickyrick

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  flake.nix  justfile  pyproject.toml  python-cowsay.nix
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
docs/: index.md  installation.md  usage.md
nix/: common.nix  python-cowsay.nix  trickyrick.nix
src/trickyrick/: __init__.py  cli.py  drawings.py
tests/: __init__.py  test_trickyrick.py
