[project]
name = "trickyrick"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.md"
authors = [
  {name = "Donovan Miller", email = "donovanm56@gmail.com"}
]
maintainers = [
  {name = "Donovan Miller", email = "donovanm56@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer >= 0.15.2",
  "terminaltexteffects >= 0.12.0",
  "textual >= 3.2.0",
  "textualeffects >= 0.1.3",
  "cowsay >= 6.1"
]
requires-python = ">= 3.13"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/dmille56/trickyrick/issues"
changelog = "https://github.com/dmille56/trickyrick/blob/master/changelog.md"
homepage = "https://github.com/dmille56/trickyrick"

[project.scripts]
trickyrick = "trickyrick.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
